2012-09-11  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java (setDefaults): When noToolCombo
	is set, the ATTR_TOOL attribute should be set to the tool variable and not the default memcheck tool.

2012-09-05  Jeff Johnston  <jjohnstn@redhat.com>

	* .settings/.api_filters: New file.
	* .settings/org.eclipse.pde.core.prefs: New file.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindSingleToolOptionsTab.java: New file.
	* META-INF/MANIFEST.MF: Bump up version to 1.2.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java: Extend
	ProfileLaunchConfigurationDelegate instead of AbstractCLaunchDelegate to work with new
	Profiling providers system. 
	(generateCommand): Add override statement.
	(createNewProcess): Ditto. 
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java (noToolCombo): New boolean to indicate
	that the tool combo should not be created.
	(createControl): Add call to update the tab.
	(initializeFrom): Don't look at selection when there is no tool combo.
	
2011-12-17 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchPlugin.java:
	Changing the visibility of getValgrindCommand back to protected
	
2011-10-05 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchPlugin.java:
	Changing the visibility of getValgrindCommand from protected to public
	
2011-09-29 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java:
	Using factories from org.eclipse.linuxtools.tools.launch.core to run
	valgrind commands.

2011-09-28 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchPlugin.java: